examples/test/testpolicy5474.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5474
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key3: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value38
          key42: value38
          key49: value10
      podSelector:
        matchLabels:
          key43: value44
